--- a/teacher.html
+++ b/teacher.html
@@ -149,21 +149,39 @@
     </nav>
   </header>
 
-  <section id="home" class="section">
-    <h1>Welcome to Smart Teacher</h1>
-    <p><strong>Smart Teacher</strong> is a revolutionary educational platform that uses technology to enhance learning. We enable students to access lessons, practice exercises, and purchase revision materials — all from the comfort of their homes or classrooms.</p>
-    <p>Key features include:
-      <ul>
-        <li>Virtual lessons delivered by qualified teachers</li>
-        <li>Revision exercises that are curriculum-aligned</li>
-        <li>Affordable downloadable exam papers</li>
-        <li>24/7 access to study materials</li>
-      </ul>
-    </p>
-    <p>Whether you're a student, a parent, or a school administrator, Smart Teacher offers modern tools that transform learning into a flexible, engaging experience.</p>
-    <img src="https://images.unsplash.com/photo-1601297183300-7a3c44dd597b?auto=format&fit=crop&w=1350&q=80" alt="Teacher and students with laptops">
-    <p><em>Smart Teacher — Where Technology Meets Education.</em></p>
-  </section>
+<section id="home" class="section" style="padding: 0;">
+  <!-- Hero Banner -->
+  <div style="background: url('https://images.unsplash.com/photo-1600195077901-c70a1bfb7034?auto=format&fit=crop&w=1350&q=80') no-repeat center center/cover; color: white; padding: 6em 2em; text-align: center;">
+    <h1 style="font-size: 2.5em; margin-bottom: 0.5em;">Welcome to Smart Teacher</h1>
+    <p style="font-size: 1.2em; max-width: 800px; margin: auto;">Empowering students through technology — learn, revise, and succeed from the comfort of your home or classroom.</p>
+  </div>
+
+  <!-- Introduction Block -->
+  <div style="padding: 3em 2em; max-width: 1000px; margin: auto;">
+    <p><strong>Smart Teacher</strong> is a modern e-learning platform that integrates technology to transform how students learn. We deliver curriculum-based content through interactive lessons, practice tools, and affordable revision materials — all accessible online.</p>
+    <p>Whether you're a primary school pupil or a secondary school student, Smart Teacher gives you the flexibility to study at your pace, track your progress, and succeed academically with confidence.</p>
+  </div>
+
+  <!-- Features Section -->
+  <div style="display: flex; flex-wrap: wrap; gap: 2em; justify-content: center; padding: 2em; background-color: #f9f9f9;">
+    <div style="flex: 1 1 280px; text-align: center;">
+      <img src="https://images.unsplash.com/photo-1600891964599-f61ba0e24092?auto=format&fit=crop&w=400&q=80" alt="Live Lessons" style="width: 100%; border-radius: 8px;">
+      <h3>Interactive Lessons</h3>
+      <p>Students access teacher-led virtual lessons anytime, anywhere — boosting engagement and understanding.</p>
+    </div>
+    <div style="flex: 1 1 280px; text-align: center;">
+      <img src="https://images.unsplash.com/photo-1596496057334-0c610acc6f5f?auto=format&fit=crop&w=400&q=80" alt="Exam Practice" style="width: 100%; border-radius: 8px;">
+      <h3>Exam Practice</h3>
+      <p>Access practice questions and downloadable mock exams based on your country's education system.</p>
+    </div>
+    <div style="flex: 1 1 280px; text-align: center;">
+      <img src="https://images.unsplash.com/photo-1584697964194-df58ab4989b7?auto=format&fit=crop&w=400&q=80" alt="Affordable Learning" style="width: 100%; border-radius: 8px;">
+      <h3>Affordable Access</h3>
+      <p>Smart Teacher is affordable for families and schools, with flexible subscription options and discounts.</p>
+    </div>
+  </div>
+</section>
+
 
   <section id="about" class="section">
     <h1>About Us</h1>
@@ -233,3 +251,4 @@
   </script>
 </body>
 </html>
+
